# python-samples

./: .gitignore  README.md
fastapi-pip-sample/app/: main.py
fastapi-poetry-sample/: pyproject.toml
fastapi-uv-sample/: pyproject.toml
fastapi-uv-sample/tests/: test_main.py
