[tool.poetry]
name = "fastapi-poetry-sample"
version = "0.1.0"
description = "FastAPI sample managed with Poetry"
authors = []

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.6"
uvicorn = {extras = ["standard"], version = "0.32.1"}

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
httpx = "0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
